--- a/nagios/Dockerfile
+++ b/nagios/Dockerfile
@@ -7,9 +7,6 @@ RUN groupadd -g 500 -r stigma && useradd -u 500 -r -m -g stigma stigma && \
         echo "stigma:S2curity" | chpasswd && \
         echo "root:Su2crity" | chpasswd
 
-# Install default package
-RUN yum -y install tuned tune-util vim bzip2 gzip unzip tar git wget curl hostname sysvinit-tools util-linux net-tools epel-release openssh* sudo yum-utils
-
 # sudo stigma sshd
 RUN echo stigma ALL=/etc/init.d/sshd >> /etc/sudoers
 RUN sed -i 's/Defaults    requiretty/\#Defaults    requiretty/g' /etc/sudoers
@@ -18,51 +15,56 @@ RUN sed -i 's/Defaults    requiretty/\#Defaults    requiretty/g' /etc/sudoers
 RUN mv /etc/localtime /etc/localtime.bak && \
         ln -s /usr/share/zoneinfo/Asia/Seoul /etc/localtime
 
+# Install Default Package
+RUN yum -y install epel-release net-tools wget curl tar git
+
+# Install Build Dependencies
+RUN yum -y install gcc glibc glibc-common gd gd-devel make net-snmp openssl-devel xinetd unzip
+
+# Install Prerequisites
+RUN yum -y install httpd php php-mysql
+
+# Create User and Group for Nagios to Use
+RUN useradd nagios && \
+        groupadd nagcmd && \
+        usermod -a -G nagcmd nagios
+
 # Set Env
 ENV PROJECT_HOME="/app" \
-    NAGIOS_HOME="/app/nagios"  \
-    NAGIOS_LOGS="/app/nagios/logs" \
-    WORK=/work
+        NAGIOS_HOME="/app/nagios" \
+        WORK="/work"
 
 # Make default directory
-RUN mkdir -p $PROJECT_HOME && mkdir -p $WORK && chown -R stigma:stigma $PROJECT_HOME && \
-    mkdir -p $NAGIOS_HOME/logs
+RUN mkdir -p $NAGIOS_HOME/logs && mkdir -p $WORK && \
+        chown -R stigma:stigma $PROJECT_HOME
 
-# install Prerequisites
-RUN yum install httpd php php-cli gcc glibc glibc-common gd gd-devel net-snmp openssl-devel wget unzip -y
+# 
+ADD ./nagios.sh $WORK/nagios.sh
+ADD ./plugins.sh $WORK/plugins.sh
+ADD ./nrpe.sh $WORK/nrpe.sh
+ADD ./graphios.sh $WORK/graphios.sh
+ADD ./post.sh $WORK/post.sh
 
-# Create user and group for Nagios to use
-RUN useradd nagios
-RUN groupadd nagcmd
-RUN usermod -a -G nagcmd nagios
-RUN usermod -a -G nagcmd apache
+# 
+RUN chmod 755 $WORK/nagios.sh $WORK/plugins.sh $WORK/nrpe.sh $WORK/graphios.sh $WORK/post.sh
 
-ADD ./nagiosInstall.sh	$WORK/nagiosInstall.sh
-ADD ./nagiosPlug.sh	$WORK/nagiosPlug.sh
-ADD ./post.sh  $WORK/post.sh
-
-RUN chmod 755 $WORK/nagiosInstall.sh $WORK/nagiosPlug.sh $WORK/post.sh
-
-# Install Nagios shall start
-RUN $WORK/nagiosInstall.sh
-
-# Creating a password for nagiosadmin
-RUN htpasswd -cb /usr/local/nagios/etc/htpasswd.users nagiosadmin qwe123
+# Install Nagios
+RUN $WORK/nagios.sh
 
 # Install Nagios Plugins
-RUN $WORK/nagiosPlug.sh
+RUN $WORK/plugins.sh
 
-# Install supervisor
-RUN yum install -y supervisor; yum clean all
+# Install NRPE
+RUN $WORK/nrpe.sh
 
-ADD ./supervisord.conf	$WORK/supervisord.conf
+# Install Graphios
+RUN $WORK/graphios.sh
 
-#COPY supervisord.conf
-COPY ./supervisord.conf /etc/supervisord.conf
+# 
+RUN yum clean all
 
-# compress Application
-RUN cd $WORK && tar cvfz $WORK/nagios.tar.gz $NAGIOS_HOME && rm -rf $PROJECT_HOME
-
+# 
 EXPOSE 80
 
-CMD ["/work/post.sh"]
+# 
+CMD ["$WORK/post.sh"]
