stigma, grafana, influxdb / Dockerfile,post.sh change

--- a/stigma/conf/httpd-vhosts.conf
+++ b/stigma/conf/httpd-vhosts.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
-        DocumentRoot    /var/www/stigma2-dev/public
-        <Directory "/var/www/stigma2-dev/public">
+        DocumentRoot    /app/stigma/public
+        <Directory "/app/stigma/public">
                 Options +FollowSymLinks
                 RewriteEngine On
                 RewriteCond %{REQUEST_FILENAME} !-d
