--- a/stigma/conf/httpd-vhosts.conf
+++ b/stigma/conf/httpd-vhosts.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
-        DocumentRoot    /app/stigma/public
-        <Directory "/app/stigma/public">
+        DocumentRoot    ###STIGMA_HOME###/public
+        <Directory "###STIGMA_HOME###/public">
                 Options +FollowSymLinks
                 RewriteEngine On
                 RewriteCond %{REQUEST_FILENAME} !-d
