--- a/nagios/conf/granati.cfg
+++ b/nagios/conf/granati.cfg
@@ -11,10 +11,10 @@
 replacement_character = _
 
 # nagios spool directory
-spool_directory = /var/spool/nagios/granati
+spool_directory = /usr/local/nagios/var/spool/granati
 
 # granati log info
-log_file = /usr/local/nagios/var/graphios.log
+log_file = /usr/local/nagios/var/granati.log
 
 # max log size in megabytes (it will rotate the files)
 log_max_size = 24
@@ -66,7 +66,7 @@ reverse_hostname = False
 #------------------------------------------------------------------------------
 
 #enable_influxdb09 = False
-enable_influxdb = False
+enable_influxdb = True
 
 # Extra tags to add to metrics, like data center location etc.
 # Only valid for 0.9
@@ -74,7 +74,7 @@ enable_influxdb = False
 
 # Comma separated list of server:ports
 # defaults to 127.0.0.1:8086 (:8087 if using SSL).
-#influxdb_servers = 127.0.0.1:8087
+influxdb_servers = 127.0.0.1:8086
 
 # SSL, defaults to False
 #influxdb_use_ssl = True
@@ -95,3 +95,7 @@ enable_influxdb = False
 
 # enable Line Protocol, defaults to False
 #influxdb_line_protocol = True
+
+influxdb_db = stigma
+influxdb_user = stigma
+influxdb_password = stigma
