modify line protocol for curl

--- a/nagios/conf/granati.cfg
+++ b/nagios/conf/granati.cfg
@@ -74,7 +74,7 @@ enable_influxdb = True
 
 # Comma separated list of server:ports
 # defaults to 127.0.0.1:8086 (:8087 if using SSL).
-influxdb_servers = 127.0.0.1:8086
+influxdb_servers = 172.17.0.3:8086
 
 # SSL, defaults to False
 #influxdb_use_ssl = True
@@ -94,7 +94,7 @@ influxdb_servers = 127.0.0.1:8086
 #nerf_influxdb = False
 
 # enable Line Protocol, defaults to False
-#influxdb_line_protocol = True
+influxdb_line_protocol = True
 
 influxdb_db = stigma
 influxdb_user = stigma
