--- a/influxdb/Dockerfile
+++ b/influxdb/Dockerfile
@@ -29,8 +29,10 @@ RUN mkdir -p ${APP_HOME} && mkdir -p ${WORK} && chown -R suser:suser ${APP_HOME}
 
 # Install influxdb
 #RUN yum -y install https://s3.amazonaws.com/influxdb/influxdb-0.8.8-1.x86_64.rpm && yum clean all
-RUN wget -P $WORK https://s3.amazonaws.com/influxdb/influxdb-0.9.3-1.x86_64.rpm && \
-    yum localinstall -y $WORK/influxdb-0.9.3-1.x86_64.rpm
+#RUN wget -P $WORK https://s3.amazonaws.com/influxdb/influxdb-0.9.3-1.x86_64.rpm && \
+#    yum localinstall -y $WORK/influxdb-0.9.3-1.x86_64.rpm
+RUN wget https://dl.influxdata.com/influxdb/releases/influxdb-0.13.0.x86_64.rpm && \
+    yum-y localinstall influxdb-0.13.0.x86_64.rpm
 
 ADD ./post.sh	${WORK}/post.sh
 ADD ./conf ${WORK_CONF}
