--- a/nagios/api/package.json
+++ b/nagios/api/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "~4.14.0",
-    "body-parser": "~1.15.2",
-    "request": "~2.73.0"
+    "express": "*",
+    "body-parser": "*",
+    "request": "*",
+    "fs": "*"
   }
 }
