--- a/stigma/conf/httpd-vhosts.conf
+++ b/stigma/conf/httpd-vhosts.conf
@@ -1,6 +1,8 @@
 <VirtualHost *:80>
         DocumentRoot    ###STIGMA_HOME###/public
         <Directory "###STIGMA_HOME###/public">
+                Require all granted
+
                 Options +FollowSymLinks
                 RewriteEngine On
                 RewriteCond %{REQUEST_FILENAME} !-d
