--- a/stigma/Dockerfile
+++ b/stigma/Dockerfile
@@ -49,7 +49,7 @@ RUN yum -y install ansible python-argparse python-pip python-wheel PyYAML python
     yum -y install gdeploy-2.0.1-1.el7.centos.noarch.rpm
 
 # Copy stigma
-RUN cp -R /tmp/stigma/ ${WORK}/
+RUN cp -R ./stigma/ ${WORK}/
 
 # Config file copy & Change owner and access permission
 ADD ./post.sh	${WORK}/post.sh
