modified base image to centos 7

--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -26,7 +26,7 @@ ENV APP_HOME="/app" \
 RUN mkdir -p ${APP_HOME} && mkdir -p ${WORK}
         #  && chown -R suser:suser ${APP_HOME}
 
-# Install grafana, supervisor
+# Install grafana
 RUN yum -y install https://grafanarel.s3.amazonaws.com/builds/grafana-3.1.1-1470047149.x86_64.rpm && yum clean all
 
 ADD ./conf	/work/conf
