--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,34 +1,33 @@
-FROM centos:6
+FROM centos:7
 
-MAINTAINER heeminChae / version: 1.0
+#MAINTAINER heeminChae / version: 1.0
 
 # Add Default User Account : suser / Change Password : root, suser
-RUN groupadd -g 500 -r suser && useradd -u 500 -r -m -g suser suser && \
-        echo "suser:S2curity" | chpasswd && \
-        echo "root:S2curity" | chpasswd
+# RUN groupadd -g 500 -r suser && useradd -u 500 -r -m -g suser suser && \
+#         echo "suser:S2curity" | chpasswd && \
+#         echo "root:S2curity" | chpasswd
 
 # Install default package
 RUN yum -y install tuned tune-util vim bzip2 gzip unzip tar git wget curl hostname sysvinit-tools util-linux net-tools epel-release openssh* sudo yum-utils
 
 # Install mysql package 
-RUN yum -y update; yum clean all && \
-    yum -y install epel-release; yum clean all && \
-    yum -y install mysql-server mysql pwgen supervisor bash-completion psmisc; yum clean all
+RUN yum -y install mysql-server mysql pwgen supervisor bash-completion psmisc; yum clean all
 
 # sudo suser sshd
-RUN echo suser ALL=/etc/init.d/sshd >> /etc/sudoers
-RUN sed -i 's/Defaults    requiretty/\#Defaults    requiretty/g' /etc/sudoers
+# RUN echo suser ALL=/etc/init.d/sshd >> /etc/sudoers
+# RUN sed -i 's/Defaults    requiretty/\#Defaults    requiretty/g' /etc/sudoers
 
 # TimeZone Change : KST
-RUN mv /etc/localtime /etc/localtime.bak && \
-        ln -s /usr/share/zoneinfo/Asia/Seoul /etc/localtime
+# RUN mv /etc/localtime /etc/localtime.bak && \
+#         ln -s /usr/share/zoneinfo/Asia/Seoul /etc/localtime
 
 # Set Env
 ENV APP_HOME="/app" \
     WORK=/work
 
 #make default directory
-RUN mkdir -p $APP_HOME && mkdir -p $WORK && chown -R suser:suser $APP_HOME
+RUN mkdir -p $APP_HOME && mkdir -p $WORK
+    # && chown -R suser:suser $APP_HOME
 
 ADD ./post.sh $WORK/post.sh
 ADD ./my.cnf	$WORK/my.cnf
