--- a/nagios/Dockerfile
+++ b/nagios/Dockerfile
@@ -35,13 +35,13 @@ RUN mkdir -p ${APP_HOME} && mkdir -p ${WORK} && mkdir -p ${NAGIOS_HOME}
 
 # Install Default, Prerequisites packages
 RUN yum -y install tar git wget epel-release && \
-    yum -y install httpd gcc glibc glibc-common unzip httpd php gd gd-devel make nrpe nodejs npm && \
+    yum -y install httpd gcc glibc glibc-common unzip httpd php gd gd-devel make openssl openssl-devel perl nodejs npm && \
     yum clean all
 
 
 # Create user and group for Nagios to use
 #RUN useradd nagios && groupadd nagcmd && usermod -a -G nagcmd nagios && usermod -a -G nagcmd apache
-RUN usermod -a -G nagios apache
+#RUN usermod -a -G nagios apache
 
 # install Node.js v4 LTS Argon
 # RUN curl --silent --location https://rpm.nodesource.com/setup_4.x | bash - && \
@@ -55,6 +55,7 @@ ADD ./config ${WORK}
 RUN chmod 755 ${NAGIOS_INIT}/nagiosInstall.sh ${NAGIOS_INIT}/nagiosPlug.sh ${NAGIOS_INIT}/graphios.sh ${WORK}/post.sh && \
     ${NAGIOS_INIT}/nagiosInstall.sh && \
     ${NAGIOS_INIT}/nagiosPlug.sh && \
+    ${NAGIOS_INIT}/nrpe.sh && \
     ${NAGIOS_INIT}/graphios.sh
 
 # compress Application
