delete nodejs, npm delete 22, 8888 (node api) port

--- a/nagios/Dockerfile
+++ b/nagios/Dockerfile
@@ -35,7 +35,7 @@ RUN mkdir -p ${APP_HOME} && mkdir -p ${WORK} && mkdir -p ${NAGIOS_HOME}
 
 # Install Default, Prerequisites packages
 RUN yum -y install tar git wget epel-release && \
-    yum -y install httpd gcc glibc glibc-common unzip httpd php gd gd-devel make openssl openssl-devel perl file nodejs npm && \
+    yum -y install httpd gcc glibc glibc-common unzip httpd php gd gd-devel make openssl openssl-devel perl file && \
     yum clean all
 
 
@@ -58,8 +58,6 @@ RUN cd ${WORK} && \
     tar cvfz ${WORK}/nagios.tar.gz ${NAGIOS_HOME} && \
     rm -rf ${NAGIOS_HOME}
 
-EXPOSE 22
 EXPOSE 80
-EXPOSE 8888
 
 CMD ["/work/post.sh"]
