--- a/stigma/Dockerfile
+++ b/stigma/Dockerfile
@@ -11,8 +11,6 @@ FROM centos:7
 RUN yum -y install tar git wget curl net-tools epel-release openssh* yum-utils sudo && \
     yum clean all
 
-RUN ssh-keygen -t rsa -f /etc/ssh/ssh_host_rsa_key -N ''
-
 # sudo suser sshd
 # RUN echo suser ALL=/etc/init.d/sshd >> /etc/sudoers
 RUN echo "apache    ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
@@ -25,8 +23,12 @@ RUN sed -i 's/Defaults    requiretty/\#Defaults    requiretty/g' /etc/sudoers
 # Set Env
 ENV APP_HOME="/app" \
     WORK="/work" \
-    WORK_CONF="/work/conf" 
+    WORK_CONF="/work/conf" \
+    SSH_PATH="/etc/ssh" \
+    SSH_HOST_RSA_KEY="ssh_host_rsa_key"
 
+# Make SSH key
+RUN ssh-keygen -t rsa -f ${SSH_PATH}/${SSH_HOST_RSA_KEY} -N ''
 
 # Make default directory
 # RUN mkdir -p $APP_HOME && mkdir -p $WORK && chown -R suser:suser $APP_HOME 
