--- a/nagios/Dockerfile
+++ b/nagios/Dockerfile
@@ -42,7 +42,7 @@ RUN ssh-keygen -t rsa -f /etc/ssh/ssh_host_rsa_key -N ''
 
 # Create user and group for Nagios to use
 RUN useradd nagios && usermod -a -G nagios nagios && usermod -a -G nagios apache && \
-    echo "root:S2crity" | chpasswd
+    echo "nagios:S2crity" | chpasswd
 
 
 # ADD Config files
